Changed Navigation Bar Appearance

--- a/ToDo3/Base.lproj/Main.storyboard
+++ b/ToDo3/Base.lproj/Main.storyboard
@@ -76,6 +76,7 @@
                     </view>
                     <navigationItem key="navigationItem" title="ToDo3" id="UPL-cJ-oy4">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="dGM-qs-vLf">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
                                 <action selector="addButton:" destination="BYZ-38-t0r" id="4Bo-oc-INb"/>
                             </connections>
@@ -97,6 +98,10 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="zgJ-v6-XSU">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.66799789669999998" green="0.47512125970000002" blue="0.25860109930000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
